# clyent

./: MANIFEST.in  pyproject.toml  setup.py
clyent/: __init__.py  errors.py
clyent/colors/: __init__.py  color.py  color_formatter.py
clyent/logs/: __init__.py  handlers.py
clyent/logs/colors/: printer.py
clyent/tests/: test_clyent.py
